--- a/css/options.css
+++ b/css/options.css
@@ -29,11 +29,12 @@ section {
 
 footer {
   display: block;
-  text-align: center;
-  padding: 0 50px;
+  text-align: left;
+  padding: 0 10px;
   margin: 50px 50px 0 50px;
   border-top: 1px solid #fff;
   box-shadow: 0 -1px rgba(0,0,0,0.15);
+  height: 150px;
 }
 
 h1 {
