--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,14 @@ body {
     padding: 5px; 
     border: none;
 }
+
+.ui-widget-content-button {
+    width: 150px; 
+    clear: both; 
+    margin: 5px; 
+    padding: 5px; 
+    border: none;
+}
     
 #demo-link { font-size:11px;  padding-top: 6px; clear: both; overflow: hidden; }
 #demo-link a span.ui-icon { float:left; margin-right:3px; }
